@@ -52,7 +52,7 @@
      <x>0</x>
      <y>0</y>
      <width>913</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
