@@ -1,4 +1,5 @@
 TBC - 0.39.0
+- [NEW] - DXC - Added Full-text search
 - [NEW] - Select S in RST Edit when focused (issue #454)
 - [CHANGED] - HamlibDrv - Added multiplatform reliable sleep
 - [CHANGED] - Backup policy
